--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.introText {
+  font-style: italic;
+  font-size: 24px;
+  font-weight: 400;
+}
